--- a/app/views/dark/restaurants/_form.html.erb
+++ b/app/views/dark/restaurants/_form.html.erb
@@ -25,5 +25,9 @@
   <%= f.label :description, "Description" %>
   <%= f.text_area :description %>
 
+  <%= f.label :image, "Photo" %>
+  <%= image_tag @restaurant.image, width: '150px' if @restaurant.image? %>
+  <%= f.file_field :image %>
+
   <%= f.submit %>
 <% end %>
