--- a/app/views/dark/restaurants/index.html.erb
+++ b/app/views/dark/restaurants/index.html.erb
@@ -3,6 +3,7 @@
   <% @restaurants.each do |restaurant| %>
     <li>
       <%= restaurant.name %>
+      <%= image_tag restaurant.image %>
       <%= link_to "Show", dark_restaurant_path(restaurant) %>
       <%= link_to "Edit", edit_dark_restaurant_path(restaurant) %>
       <%= link_to "Delete", dark_restaurant_path(restaurant), method: :delete, data:{confirm:"Are you sure?"} %>
