--- a/app/views/dark/restaurants/index.html.erb
+++ b/app/views/dark/restaurants/index.html.erb
@@ -1,15 +1,29 @@
-<h1>餐廳後台</h1>
-<ul>
+<div class="row mt-5">
+  <div class="col-auto mr-auto">
+    <h1>餐廳後台</h1>
+  </div>
+  <div class="col-auto">
+    <%= link_to "New Restaurant", new_dark_restaurant_path, class: "btn btn-success ml-auto" %>
+  </div>
+</div>
+<div class="card-columns mt-5">
   <% @restaurants.each do |restaurant| %>
-    <li>
-      <%= restaurant.name %>
-      <%= image_tag restaurant.image, width: '150px' if restaurant.image? %>
-      <%= link_to "Show", dark_restaurant_path(restaurant) %>
-      <%= link_to "Edit", edit_dark_restaurant_path(restaurant) %>
-      <%= link_to "Delete", dark_restaurant_path(restaurant), method: :delete, data:{confirm:"Are you sure?"} %>
-    </li>
+  <div class="card">
+    <% if restaurant.image? %>
+    <%= image_tag restaurant.image, class: "card-img-top"  %>
+    <% else %>
+    <img class="card-img-top" src="http://lorempixel.com/300/200/food/1">
+    <% end %>
+    <div class="card-body">
+      <h4 class="card-title"><%= restaurant.name %></h4>
+      <p class="card-text"><%= restaurant.description %></p>
+      <%= link_to "Detail", dark_restaurant_path(restaurant), class: "btn btn-outline-dark" %>
+      <hr>
+      <%= link_to "Edit", edit_dark_restaurant_path(restaurant), class: "badge badge-primary" %>
+      <%= link_to "Delete", dark_restaurant_path(restaurant), method: :delete, data:{confirm:"Are you sure?"}, class: "badge badge-danger"  %>
+    </div>
+  </div>
   <% end %>
-</ul>
-<%= paginate @restaurants %><br>
-<%= link_to "New Restaurant", new_dark_restaurant_path %>
+</div>
 
+<%= paginate @restaurants %><br>
