add Kaminari theme

--- a/app/views/dark/restaurants/index.html.erb
+++ b/app/views/dark/restaurants/index.html.erb
@@ -25,5 +25,6 @@
   </div>
   <% end %>
 </div>
-
-<%= paginate @restaurants %><br>
+<div class="row justify-content-md-center mt-5 mb-5">
+<%= paginate @restaurants %>
+</div>
