--- a/app/views/dark/restaurants/_form.html.erb
+++ b/app/views/dark/restaurants/_form.html.erb
@@ -10,24 +10,30 @@
 <% end %>
 
 <%= form_for [:dark, @restaurant] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-
-  <%= f.label :tel, "Tel" %>
-  <%= f.text_field :tel %>
-
-  <%= f.label :address, "Address" %>
-  <%= f.text_field :address %>
-
-  <%= f.label :opening_hours, "Opening Hours" %>
-  <%= f.text_field :opening_hours %>
-
-  <%= f.label :description, "Description" %>
-  <%= f.text_area :description %>
-
-  <%= f.label :image, "Photo" %>
-  <%= image_tag @restaurant.image, width: '150px' if @restaurant.image? %>
-  <%= f.file_field :image %>
-
-  <%= f.submit %>
+  <div class="form-group">
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :tel, "Tel" %>
+    <%= f.text_field :tel, class: "form-control"  %>
+  </div>
+  <div class="form-group">
+    <%= f.label :address, "Address" %>
+    <%= f.text_field :address, class: "form-control"  %>
+  </div>
+  <div class="form-group">
+    <%= f.label :opening_hours, "Opening Hours" %>
+    <%= f.text_field :opening_hours, class: "form-control"  %>
+  </div>
+  <div class="form-group">
+    <%= f.label :description, "Description" %>
+    <%= f.text_area :description, class: "form-control"  %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image, "Photo" %>
+    <%= image_tag @restaurant.image, width: '150px' ,class: "img-thumbnail mb-2" if @restaurant.image? %>
+    <%= f.file_field :image, class: "form-control-file"  %>
+  </div>
+  <%= f.submit class: "btn btn-success" %>
 <% end %>
