--- a/app/views/dark/restaurants/show.html.erb
+++ b/app/views/dark/restaurants/show.html.erb
@@ -5,7 +5,6 @@
       <h2><%= @restaurant.name %></h2>
     </div>
   </div>
-
   <div class="row justify-content-center mt-5">
     <div class="col-md-4">
       <% if @restaurant.image? %>
@@ -16,7 +15,8 @@
     </div>
     <div class="col-md-4 mt-3">
       <ul>
-        <li>Opening Hours:<%= @restaurant.opening_hours %></li>
+        <li>Category: <%= @restaurant.category.name %></li>
+        <li>Opening Hours: <%= @restaurant.opening_hours %></li>
         <li>Tel: <%= @restaurant.tel %></li>
         <li>Address: <%= @restaurant.address %></li>
       </ul>
