--- a/app/views/dark/categories/index.html.erb
+++ b/app/views/dark/categories/index.html.erb
@@ -1,10 +1,18 @@
 <div class="row mt-5">
   <div class="col-auto mr-auto">
-    <h1>餐廳後台</h1>
+    <h1>分類列表</h1>
   </div>
   <div class="col-auto">
     <%= link_to 'Restaurant', dark_restaurants_path %> |
     <%= link_to 'Categories', dark_categories_path %>
+  </div>
+  <div>
+    <%= form_for [:dark, @category] do |f| %>
+    <div class="form-group">
+      <%= f.text_field :name, class: "form-control" %>
+      <%= f.submit class: "btn btn-success" %>
+    </div>
+    <% end %>
   </div>
 </div>
 <div class="row mt-5">
@@ -12,7 +20,7 @@
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
-          <th>#</th>
+          <th>NO #</th>
           <th>Category Name</th>
         </tr>
       </thead>
