--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -12,10 +12,10 @@
     <img class="card-img-top" src="https://loremflickr.com/300/200/dinner/?random=<%= rand(1..30)%>">
     <% end %>
     <div class="card-body">
-      <h4 class="card-title"><%= link_to restaurant.name , dark_restaurant_path(restaurant), class: "text-muted" %></h4>
-      <p><%= link_to restaurant.category.name, dark_restaurant_path(restaurant), class: "badge badge-success" %></p>
+      <h4 class="card-title"><%= link_to restaurant.name, restaurant_path(restaurant), class: "text-muted" %></h4>
+      <p><%= link_to restaurant.category.name, restaurant_path(restaurant), class: "badge badge-success" %></p>
       <p class="card-text"><%= truncate(restaurant.description, length: 80) %></p>
-      <%= link_to "Detail", dark_restaurant_path(restaurant), class: "btn btn-outline-dark" %>
+      <%= link_to "Detail", restaurant_path(restaurant), class: "btn btn-outline-dark" %>
     </div>
   </div>
   <% end %>
