--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,6 +3,14 @@
     <h1>餐廳列表</h1>
   </div>
 </div>
+<div class="row mt-5">
+  <ul class="nav nav-pills mx-auto">
+  <li class="nav-item"><%= link_to "全部分類", restaurants_path, class: "nav-link active" %></li>
+  <% @categories.each do |category| %>
+  <li class="nav-item"><%= link_to category.name, category_path(category), class: "nav-link" %></li>
+  <% end %>
+  </ul>
+</div>
 <div class="card-columns mt-5">
   <% @restaurants.each do |restaurant| %>
   <div class="card">
@@ -12,7 +20,7 @@
     <img class="card-img-top" src="https://loremflickr.com/300/200/dinner/?random=<%= rand(1..30)%>">
     <% end %>
     <div class="card-body">
-      <h4 class="card-title"><%= link_to restaurant.name, restaurant_path(restaurant), class: "text-muted" %></h4>
+      <h4 class="card-title"><%= link_to restaurant.name, restaurant_path(restaurant), class: "text-dark" %></h4>
       <p><%= link_to restaurant.category.name, restaurant_path(restaurant), class: "badge badge-success" %></p>
       <p class="card-text"><%= truncate(restaurant.description, length: 80) %></p>
       <%= link_to "Detail", restaurant_path(restaurant), class: "btn btn-outline-dark" %>
