--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,9 +5,15 @@
 </div>
 <div class="row mt-5">
   <ul class="nav nav-pills mx-auto">
-  <li class="nav-item"><%= link_to "全部分類", restaurants_path, class: "nav-link active" %></li>
+  <li class="nav-item"><%= link_to "全部分類", restaurants_path, class: "nav-link" %></li>
   <% @categories.each do |category| %>
-  <li class="nav-item"><%= link_to category.name, category_path(category), class: "nav-link" %></li>
+  <li class="nav-item">
+    <% if category == @category %>
+    <%= link_to category.name, category_path(category), class: "nav-link active" %>
+    <% else %>
+    <%= link_to category.name, category_path(category), class: "nav-link" %>
+    <% end %>
+  </li>
   <% end %>
   </ul>
 </div>
