--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -30,6 +30,23 @@
     </div>
   </div>
 
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-8">
+      <h3>Comments</h3>
+
+      <%= form_for [@restaurant, @comment] do |f| %>
+        <div class="form-group">
+          <%= f.text_area :content, placeholder: "留個言吧", class: "form-control"  %>
+        </div>
+        <div class="form-group">
+          <%= f.submit class: "btn btn-primary" %>
+          <%= f.button "Cancel", type: :reset, class: "btn btn-danger" %>
+        </div>
+      <% end %>
+
+    </div>
+  </div>
+
   <div class="row justify-content-center mt-5 mb-5">
     <%= link_to 'Back to index', restaurants_path, class: "btn btn-primary" %>
   </div>
