add comments on restaurant show page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -43,7 +43,15 @@
           <%= f.button "Cancel", type: :reset, class: "btn btn-danger" %>
         </div>
       <% end %>
-
+    </div>
+    <div class="col-md-8">
+        <hr>
+        <% @restaurant.comments.each do |comment| %>
+        <h4><%= comment.user.email.split("@").first.titleize %></h4>
+        <p><%= comment.content %></p>
+        <p><small class="text-muted"><%= time_ago_in_words comment.created_at %> ago</small></p>
+        <hr>
+        <% end %>
     </div>
   </div>
 
