--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,12 +5,17 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
+    <% if current_user && current_user.is_admin?  %>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><%= link_to "進入後台", dark_restaurants_path, class: "btn btn-outline-light"%></li>
+      </ul>
+    <% end %>
     <ul class="navbar-nav ml-auto">
       <% if current_user %>
+        <li class="navbar-brand"><%= image_tag current_user.avatar, width: "30px" if current_user.avatar? %></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Hi, <%= current_user.email %></a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Hi, <%= current_user.name %> </a>
           <div class="dropdown-menu dropdown-menu-right">
-            <%= link_to "進入後台", dark_restaurants_path, class: "dropdown-item" if current_user.is_admin? %>
             <%= link_to('關於我', user_path(current_user), class: "dropdown-item") %>
             <%= link_to('修改密碼', edit_user_registration_path, class: "dropdown-item") %>
             <%= link_to('登出', destroy_user_session_path, method: :delete, class: "dropdown-item") %>
