--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,6 +19,7 @@
         <li>Tel: <%= @restaurant.tel %></li>
         <li>Address: <%= @restaurant.address %></li>
       </ul>
+      <%= link_to "Dashboard", dashboard_restaurant_path(@restaurant),class: "btn btn-primary"  %>
     </div>
   </div>
 
