--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,6 +20,8 @@
         <li>Address: <%= @restaurant.address %></li>
       </ul>
       <%= link_to "Dashboard", dashboard_restaurant_path(@restaurant),class: "btn btn-primary"  %>
+      <%= link_to 'Favorite', favorite_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
+      <%= link_to 'Unfavorite', unfavorite_restaurant_path(@restaurant), method: :post, class: "btn btn-info" %>
     </div>
   </div>
 
