--- a/app/views/share/_restaurant_list.html.erb
+++ b/app/views/share/_restaurant_list.html.erb
@@ -9,7 +9,7 @@
     <div class="card-body">
       <h4 class="card-title"><%= link_to restaurant.name, restaurant_path(restaurant), class: "text-dark" %></h4>
       <p><%= link_to restaurant.category.name, restaurant_path(restaurant), class: "badge badge-success" %></p>
-      <p><%= render partial: "share/favorite", locals: {restaurant: restaurant} %></p>
+      <p><%= render partial: "share/favorite", locals: {restaurant: restaurant} %> <%= render partial: "share/like", locals: {restaurant: restaurant} %></p>
       <p class="card-text"><%= truncate(restaurant.description, length: 80) %></p>
       <%= link_to "Detail", restaurant_path(restaurant), class: "btn btn-outline-dark" %>
     </div>
