--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -49,7 +49,7 @@
     <div class="col-md-8">
         <hr>
         <% @restaurant.comments.each do |comment| %>
-          <h4><%= comment.user.email.split("@").first.titleize %></h4>
+          <h4><%= comment.user.name %></h4>
           <p><%= comment.content %></p>
           <p>
             <small class="text-muted">
