--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,6 +11,10 @@
       </ul>
     <% end %>
     <ul class="navbar-nav ml-auto">
+      <li class="nav-item"><%= link_to "首頁", root_path, class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "最新動態", feeds_restaurants_path, class: "nav-link" %></li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
       <% if current_user %>
         <li class="navbar-brand"><%= image_tag current_user.avatar, width: "30px" if current_user.avatar? %></li>
         <li class="nav-item dropdown">
