--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,25 +1,25 @@
-<div class="row mt-5">
-  <div class="col-auto mr-auto">
+<div class="container">
+  <div class="row mt-5">
     <h1>餐廳列表</h1>
   </div>
-</div>
-<div class="row mt-5">
-  <ul class="nav nav-pills mx-auto">
-  <li class="nav-item"><%= link_to "全部分類", restaurants_path, class: "nav-link" %></li>
-  <% @categories.each do |category| %>
-  <li class="nav-item">
-    <% if category == @category %>
-    <%= link_to category.name, category_path(category), class: "nav-link active" %>
-    <% else %>
-    <%= link_to category.name, category_path(category), class: "nav-link" %>
+  <div class="row mt-5">
+    <ul class="nav nav-pills mx-auto">
+    <li class="nav-item"><%= link_to "全部分類", restaurants_path, class: "nav-link" %></li>
+    <% @categories.each do |category| %>
+    <li class="nav-item">
+      <% if category == @category %>
+      <%= link_to category.name, category_path(category), class: "nav-link active" %>
+      <% else %>
+      <%= link_to category.name, category_path(category), class: "nav-link" %>
+      <% end %>
+    </li>
     <% end %>
-  </li>
-  <% end %>
-  </ul>
-</div>
+    </ul>
+  </div>
 
-<%= render partial: "share/restaurant_list" %>
+  <%= render partial: "share/restaurant_list" %>
 
-<div class="row justify-content-md-center mt-5 mb-5">
-<%= paginate @restaurants %>
+  <div class="row justify-content-md-center mt-5 mb-5">
+  <%= paginate @restaurants %>
+  </div>
 </div>
