--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,19 +1,19 @@
-<div class="row mt-5">
-  <div class="col-auto mr-auto">
+<div class="container">
+  <div class="row mt-5">
     <h1>餐廳列表</h1>
   </div>
-</div>
-<div class="row mt-5">
-  <ul class="nav nav-pills mx-auto">
-  <li class="nav-item"><%= link_to "全部分類", restaurants_path, class: "nav-link active" %></li>
-  <% @categories.each do |category| %>
-  <li class="nav-item"><%= link_to category.name, category_path(category), class: "nav-link" %></li>
-  <% end %>
-  </ul>
-</div>
+  <div class="row mt-5">
+    <ul class="nav nav-pills mx-auto">
+    <li class="nav-item"><%= link_to "全部分類", restaurants_path, class: "nav-link active" %></li>
+    <% @categories.each do |category| %>
+    <li class="nav-item"><%= link_to category.name, category_path(category), class: "nav-link" %></li>
+    <% end %>
+    </ul>
+  </div>
 
-<%= render partial: "share/restaurant_list" %>
+  <%= render partial: "share/restaurant_list" %>
 
-<div class="row justify-content-md-center mt-5 mb-5">
-<%= paginate @restaurants %>
+  <div class="row justify-content-md-center mt-5 mb-5">
+  <%= paginate @restaurants %>
+  </div>
 </div>
