--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
       <h3><%= @user.name %></h3>
       <p>Email: <%= @user.email %></p>
       <p>Intro: <%= @user.intro %></p>
-      <p><%= link_to "Edit Profile", edit_user_path(@user), class: "btn btn-primary"  %></p>
+      <p><%= link_to "Edit Profile", edit_user_path(@user), class: "btn btn-primary" if @user == current_user %></p>
     </div>
   </div>
   <div class="row justify-content-center mt-5">
