--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,7 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><%= link_to "首頁", root_path, class: "nav-link" %></li>
       <li class="nav-item"><%= link_to "最新動態", feeds_restaurants_path, class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "Top 10 餐廳",ranking_restaurants_path, class: "nav-link" %></li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <% if current_user %>
