--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,12 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <% if current_user && current_user.is_admin?  %>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><%= link_to "進入後台", dark_restaurants_path, class: "btn btn-outline-light"%></li>
-      </ul>
-    <% end %>
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item"><%= link_to "首頁", root_path, class: "nav-link" %></li>
       <li class="nav-item"><%= link_to "最新動態", feeds_restaurants_path, class: "nav-link" %></li>
       <li class="nav-item"><%= link_to "Top 10 餐廳",ranking_restaurants_path, class: "nav-link" %></li>
@@ -18,6 +13,9 @@
     </ul>
     <ul class="navbar-nav ml-auto">
       <% if current_user %>
+        <% if current_user.is_admin?  %>
+          <li class="nav-item"><%= link_to "進入後台", dark_restaurants_path, class: "btn btn-outline-light"%></li>
+        <% end %>
         <li class="navbar-brand"><%= image_tag current_user.avatar, width: "30px" if current_user.avatar? %></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Hi, <%= current_user.name %> </a>
