add friend ship view in user profile

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,6 +19,7 @@
           </p>
           <p>
             <%= render partial: "share/follow", locals: {user: user} if user != current_user %>
+            <%= render partial: "share/friend", locals: {user: user} if user != current_user %>
           </p>
         </div>
       <% end %>
